# argparse

./: CMakeLists.txt  Taskfile.yaml
argparse/: CMakeLists.txt  argparse.c  argparse.h
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt  Test_ArgParse.c  Test_ArgParse_ValidateFlags.c
